@@ -5,6 +5,7 @@ Revision history for {{$dist->name}}
   - Require Bootstrap::lib plugin so that it's available
   - Allow cpanm to choose best place to install (install_command)
   - Remove qw(anno forum kwalitee) from SUPPORT websites
+  - Remove Test::Pod::No404s since most links are generated
 
 3.100     2011-05-10T03:16:24Z
 
